fix spacing and alignment

--- a/css/main.css
+++ b/css/main.css
@@ -11531,8 +11531,11 @@ main {
 .header {
   padding: 0 0.75rem;
   background-color: rgba(255, 255, 255, 0.954);
+  -webkit-box-shadow: #b1b1b1 0 -0.5rem 1rem 0.25rem;
+          box-shadow: #b1b1b1 0 -0.5rem 1rem 0.25rem;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .header nav {
@@ -11805,14 +11808,16 @@ main {
 }
 
 .project-deck {
-  padding: 4rem 4rem 2rem;
-  margin: 4rem 0 0 0;
+  padding: 4rem 0 2rem;
+  margin-top: 4rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media (max-width: 767.98px) {
   .project-deck {
     padding: 2rem;
-    margin: 2rem 0 0 0;
+    margin-top: 2rem;
   }
 }
 
@@ -11820,6 +11825,12 @@ main {
   text-align: center;
   -webkit-transition: all 250ms ease-in-out;
   transition: all 250ms ease-in-out;
+}
+
+@media (max-width: 991.98px) {
+  .project-card {
+    margin-bottom: 2rem;
+  }
 }
 
 .project-card .card-header {
