--- a/scss/custom-theme/_feature.scss
+++ b/scss/custom-theme/_feature.scss
@@ -5,7 +5,7 @@
     @include media-breakpoint-down(md) {
         margin-top: 6rem;
     }
-    
+
     &__heading {
         font-family: $flamenco;
         font-size: 4.2rem;
@@ -45,7 +45,7 @@
     top: 40%;
     left: 40%;
     background-image: url("/assets/images/logo-warp-imgs/0.png");
-    background-repeat: no-repeat;    
+    background-repeat: no-repeat;
     background-position: center;
     background-size: 50%;
     width: 10%;
@@ -60,24 +60,30 @@
 
 // Projects Section
 .project-deck {
-    padding: 4rem 4rem 2rem;
-    margin: 4rem 0 0 0;
+    padding: 4rem 0 2rem;
+    margin-top: 4rem;
+    margin-left: auto;
+    margin-right: auto;
 
     @include media-breakpoint-down(md) {
         padding: 2rem;
-        margin: 2rem 0 0 0;
+        margin-top: 2rem;
     }
 }
 
 .project-card {
     text-align: center;
     transition: all 250ms ease-in-out;
-    
+
+    @include media-breakpoint-down(lg) {
+        margin-bottom: 2rem;
+    }
+
     .card-header {
         background-color: rgb(250, 250, 250);
         padding: 1rem 1rem;
     }
-    
+
     &:hover {
         color: $theme-2;
         border-color: $theme-1;
